Add quantity selector to photo details, and add quantity input script to includes. Redesign cart

--- a/photos/templates/photos/gallery.html
+++ b/photos/templates/photos/gallery.html
@@ -17,7 +17,7 @@
 
     <!-- Cart Link -->
     <div class="mb-3">
-        <a href="{% url 'cart:view_cart' %}" class="btn btn-outline-info">
+        <a href="{% url 'view_cart' %}" class="btn btn-outline-info">
             View Cart (
             {% if user.is_authenticated %}
                 {% with request.user.cart.items.count as cart_count %}
