--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -1,65 +1,154 @@
 {% extends "base.html" %}
 {% load static %}
+{% load cart_tools %}
+
+{% block page_header %}
+    <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
+    </div>
+{% endblock %}
 
 {% block content %}
-<div class="container my-5">
-    <h1 class="text-center mb-4">Your Shopping Cart</h1>
+    <div class="overlay"></div>
+    <main class="d-flex flex-column min-vh-100">
+        <div class="container mb-2 flex-grow-1">
+            <div class="row">
+                <div class="col">
+                    <hr>
+                    <h2 class="logo-font mb-4">Shopping Cart</h2>
+                    <hr>
+                </div>
+            </div>
 
-    {% if items %}
-        <table class="table table-striped table-bordered">
-            <thead class="thead-dark">
-                <tr>
-                    <th class="text-center font-weight-bold">Product</th>
-                    <th class="text-center font-weight-bold">Price</th>
-                    <th class="text-center font-weight-bold">Quantity</th>
-                    <th class="text-right font-weight-bold">Subtotal</th>
-                    <th class="text-center font-weight-bold">Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for item in items %}
-                    <tr>
-                        <td class="text-center">
-                            <div class="d-flex align-items-center">
-                                <img src="{{ item.photo.image.url }}" alt="{{ item.photo.title }}" class="img-thumbnail mr-3" style="width: 80px; height: auto;">
-                                <span>{{ item.photo.title }}</span>
-                            </div>
-                        </td>
-                        <td class="text-right">${{ item.photo.price }}</td>
-                        <td class="text-center">
-                            <form action="{% url 'cart:update_cart' item.id %}" method="POST" class="form-inline justify-content-center">
-                                {% csrf_token %}
-                                <input type="number" name="quantity" value="{{ item.quantity }}" min="1" class="form-control form-control-sm mx-2" style="width: 60px;">
-                                <button type="submit" class="btn btn-primary btn-sm mt-3">Update</button>
-                            </form>
-                        </td>
-                        <td class="text-right">${{ item.subtotal }}</td>
-                        <td class="text-center">
-                            <form action="{% url 'cart:remove_from_cart' item.id %}" method="POST">
-                                {% csrf_token %}
-                                <button type="submit" class="btn btn-danger btn-sm">Remove</button>
-                            </form>
-                        </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-            <tfoot>
-                <tr>
-                    <td colspan="3" class="text-right font-weight-bold">Total:</td>
-                    <td class="text-right font-weight-bold text-success">${{ total_price }}</td>
-                    <td></td>
-                </tr>
-            </tfoot>
-        </table>
-        
-        <div class="text-center mt-4">
-            <a href="{% url 'checkout:checkout' %}" class="btn btn-success btn-lg">Proceed to Checkout</a>
-            <a href="{% url 'gallery' %}" class="btn btn-secondary btn-lg">Continue Shopping</a>
+            <div class="row">
+                <div class="col">
+                    {% if cart_items %}
+                        <div class="table-responsive rounded">
+                            <table class="table table-sm table-borderless">
+                                <thead class="text-black">
+                                    <tr>
+                                        <th scope="col">Photo Info</th>
+                                        <th scope="col"></th>
+                                        <th scope="col">Price</th>
+                                        <th scope="col">Qty</th>
+                                        <th scope="col">Subtotal</th>
+                                    </tr>
+                                </thead>
+
+                                {% for item in cart_items %}
+                                    <tr>
+                                        <td class="p-3 w-25">
+                                            {% if item.photo.image %}
+                                            <img class="img-fluid rounded" src="{{ item.photo.image.url }}" alt="{{ item.photo.name }}">
+                                            {% else %}
+                                            <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.photo.name }}">
+                                            {% endif %}
+                                        </td>
+                                        <td class="py-3">
+                                            <p class="my-0"><strong>{{ item.photo.name }}</strong></p>
+                                            <p class="my-0 small text-muted">ID: {{ item.item_id }}</p>
+                                        </td>
+                                        <td class="py-3">
+                                            <p class="my-0">${{ item.photo.price }}</p>
+                                        </td>
+                                        <td class="py-3 w-25">
+                                            <form class="form update-form" method="POST" action="{% url 'update_cart' item.item_id %}">
+                                                {% csrf_token %}
+                                                <div class="form-group">
+                                                    <div class="input-group">
+                                                        <div class="input-group-prepend">
+                                                            <button class="decrement-qty btn btn-sm btn-black rounded-0" 
+                                                                data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
+                                                                <span>
+                                                                    <i class="fas fa-minus fa-sm"></i>
+                                                                </span>
+                                                            </button>
+                                                        </div>
+                                                        <input class="form-control form-control-sm qty_input" type="number"
+                                                            name="quantity" value="{{ item.quantity }}" min="1" max="99"
+                                                            data-item_id="{{ item.item_id }}"
+                                                            id="id_qty_{{ item.item_id }}">
+                                                        <div class="input-group-append">
+                                                            <button class="increment-qty btn btn-sm btn-black rounded-0"
+                                                                data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
+                                                                <span>
+                                                                    <i class="fas fa-plus fa-sm"></i>
+                                                                </span>
+                                                            </button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </form>
+                                            <a class="update-link text-info"><small>Update</small></a>
+                                            <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}"><small>Remove</small></a>
+                                        </td>
+                                        <td class="py-3">
+                                            <p class="my-0">${{ item.photo.price|floatformat:2 }}</p>
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                                <tr>
+                                    <td colspan="5" class="pt-5 text-right">
+                                        <h6><strong>Cart Total: ${{ total|floatformat:2 }}</strong></h6>
+                                        <h4 class="mt-4"><strong>Grand Total: ${{ grand_total|floatformat:2 }}</strong></h4>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td colspan="5" class="text-right">
+                                        <a href="{% url 'photos' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                                            <span class="icon">
+                                                <i class="fas fa-chevron-left"></i>
+                                            </span>
+                                            <span class="text-uppercase">Keep Shopping</span>
+                                        </a>
+                                        <a href="{% url 'checkout' %}" class="btn btn-black rounded-0 btn-lg">
+                                            <span class="text-uppercase">Secure Checkout</span>
+                                            <span class="icon">
+                                                <i class="fas fa-lock"></i>
+                                            </span>
+                                        </a>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                    {% else %}
+                        <p class="lead mb-5">Your cart is empty.</p>
+                        <a href="{% url 'gallery' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                            <span class="icon">
+                                <i class="fas fa-chevron-left"></i>
+                            </span>
+                            <span class="text-uppercase">Keep Shopping</span>
+                        </a>
+                    {% endif %}
+                </div>
+            </div>
         </div>
-    {% else %}
-        <div class="alert alert-warning text-center" role="alert">
-            Your cart is empty. <a href="{% url 'gallery' %}" class="alert-link">Browse the gallery</a> to add items to your cart.
-        </div>
-    {% endif %}
-</div>
+    </main>
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+{% include 'photos/includes/quantity_input_script.html' %}
+
+<script type="text/javascript">
+    // Update quantity on click
+    $('.update-link').click(function(e) {
+        var form = $(this).prev('.update-form');
+        form.submit();
+    });
+
+    // Remove item and reload on click
+    $('.remove-item').click(function(e) {
+        var csrfToken = "{{ csrf_token }}";
+        var itemId = $(this).attr('id').split('remove_')[1];
+        var url = `/cart/remove-from-cart/${itemId}/`;
+
+        $.post(url, { 'csrfmiddlewaretoken': csrfToken })
+         .done(function() {
+             location.reload();
+         });
+    });
+</script>
 {% endblock %}
