--- a/photos/templates/photos/includes/quantity_input_script.html
+++ b/photos/templates/photos/includes/quantity_input_script.html
@@ -1,44 +1,24 @@
 <script type="text/javascript">
-
-    // Disable +/- buttons outside 1-99 range
-    function handleEnableDisable(itemId) {
-        var currentValue = parseInt($(`#id_qty_${itemId}`).val());
-        var minusDisabled = currentValue < 2;
-        var plusDisabled = currentValue > 98;
-        $(`#decrement-qty_${itemId}`).prop('disabled', minusDisabled);
-        $(`#increment-qty_${itemId}`).prop('disabled', plusDisabled);
-    }
-
     // Ensure proper enabling/disabling of all inputs on page load
     var allQtyInputs = $('.qty_input');
     for(var i = 0; i < allQtyInputs.length; i++){
-        var itemId = $(allQtyInputs[i]).data('item_id');
-        handleEnableDisable(itemId);
+        var photoId = $(allQtyInputs[i]).data('photo_id');
+        var currentValue = parseInt($(`#id_qty_${photoId}`).val());
+        handleEnableDisable(photoId, currentValue);
     }
 
     // Check enable/disable every time the input is changed
     $('.qty_input').change(function() {
-        var itemId = $(this).data('item_id');
-        handleEnableDisable(itemId);
+        var photoId = $(this).data('photo_id');
+        var currentValue = parseInt($(this).val());
+        handleEnableDisable(photoId, currentValue);
     });
 
-    // Increment quantity
-    $('.increment-qty').click(function(e) {
-       e.preventDefault();
-       var closestInput = $(this).closest('.input-group').find('.qty_input')[0];
-       var currentValue = parseInt($(closestInput).val());
-       $(closestInput).val(currentValue + 1);
-       var itemId = $(this).data('item_id');
-       handleEnableDisable(itemId);
-    });
-
-    // Decrement quantity
-    $('.decrement-qty').click(function(e) {
-       e.preventDefault();
-       var closestInput = $(this).closest('.input-group').find('.qty_input')[0];
-       var currentValue = parseInt($(closestInput).val());
-       $(closestInput).val(currentValue - 1);
-       var itemId = $(this).data('item_id');
-       handleEnableDisable(itemId);
-    });
+    // Function to enable/disable arrows based on quantity
+    function handleEnableDisable(photoId, currentValue) {
+        var minusDisabled = currentValue < 2;
+        var plusDisabled = currentValue > 98;
+        // Handle browser-specific disabling of input arrows
+        $(`#id_qty_${photoId}`).prop('min', 1).prop('max', 99);
+    }
 </script>
