--- a/photos/templates/photos/photo_detail.html
+++ b/photos/templates/photos/photo_detail.html
@@ -36,28 +36,10 @@
             <div class="col-12">
                 <p class="mt-3"><strong>Quantity:</strong></p>
                 <div class="form-group w-50">
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <button class="decrement-qty btn btn-black rounded-0" 
-                                data-item_id="{{ photo.id }}" id="decrement-qty_{{ photo.id }}">
-                                <span class="icon">
-                                    <i class="fas fa-minus"></i>
-                                </span>
-                            </button>
-                        </div>
-                        <input class="form-control qty_input" type="number"
-                            name="quantity" value="1" min="1" max="99"
-                            data-item_id="{{ photo.id }}"
-                            id="id_qty_{{ photo.id }}">
-                        <div class="input-group-append">
-                            <button class="increment-qty btn btn-black rounded-0"
-                                data-item_id="{{ photo.id }}" id="increment-qty_{{ photo.id }}">
-                                <span class="icon">
-                                    <i class="fas fa-plus"></i>
-                                </span>
-                            </button>
-                        </div>
-                    </div>
+                    <input class="form-control qty_input" type="number"
+                        name="quantity" value="1" min="1" max="99"
+                        data-photo_id="{{ photo.id }}"
+                        id="id_qty_{{ photo.id }}">
                 </div>
             </div>
 
@@ -66,6 +48,8 @@
             <form action="{% url 'add_to_cart' photo.id %}" method="POST" class="mt-3">
                 {% csrf_token %}
                 <input type="hidden" name="quantity" value="1" id="quantity-input">
+                <!-- Include the redirect_url hidden field -->
+                <input type="hidden" name="redirect_url" value="{% url 'view_cart' %}">
                 <button type="submit" class="btn btn-success">Add to Cart</button>
             </form>
         </div>
