--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -11,193 +11,163 @@
 {% endblock %}
 
 {% block content %}
+<div class="d-flex flex-column min-vh-100">
     <div class="overlay"></div>
-    <main class="d-flex flex-column min-vh-100">
-        <div class="container mb-2 flex-grow-1">
-            <div class="row">
-                <div class="col">
-                    <hr>
-                    <h2 class="logo-font mb-4">Shopping Cart</h2>
-                    <hr>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col">
-                    {% if cart_items %}
-                        <div class="table-responsive rounded">
-                            <table class="table table-sm table-borderless">
-                                <thead class="text-black">
-                                    <tr>
-                                        <th scope="col">Photo Info</th>
-                                        <th scope="col"></th>
-                                        <th scope="col">Price</th>
-                                        <th scope="col">Qty</th>
-                                        <th scope="col">Subtotal</th>
-                                    </tr>
-                                </thead>
-
-                                {% for item in cart_items %}
-                                    <tr>
-                                        <td class="p-3 w-25">
-                                            {% if item.photo.image %}
-                                            <img class="img-fluid rounded" src="{{ item.photo.image.url }}" alt="{{ item.photo.name }}">
-                                            {% else %}
-                                            <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.photo.name }}">
-                                            {% endif %}
-                                        </td>
-                                        <td class="py-3">
-                                            <p class="my-0"><strong>{{ item.photo.name }}</strong></p>
-                                            <p class="my-0 small text-muted">ID: {{ item.photo.id }}</p>
-                                        </td>
-                                        <td class="py-3">
-                                            <p class="my-0">${{ item.photo.price }}</p>
-                                        </td>
-                                        <td class="py-3 w-25">
-                                            <form class="form update-form" method="POST" action="{% url 'adjust_cart' item.photo.id %}">
-                                                {% csrf_token %}
-                                                <div class="form-group">
-                                                    <div class="input-group">
-                                                        <div class="input-group-prepend">
-                                                            <button class="decrement-qty btn btn-sm btn-black rounded-0" 
-                                                                data-photo_id="{{ item.photo.id }}" id="decrement-qty_{{ item.photo.id }}">
-                                                                <span>
-                                                                    <i class="fas fa-minus fa-sm"></i>
-                                                                </span>
-                                                            </button>
-                                                        </div>
-                                                        <input class="form-control form-control-sm qty_input" type="number"
-                                                            name="quantity" value="{{ item.quantity }}" min="1" max="99"
-                                                            data-photo_id="{{ item.photo.id }}"
-                                                            id="id_qty_{{ item.photo.id }}">
-                                                        <div class="input-group-append">
-                                                            <button class="increment-qty btn btn-sm btn-black rounded-0"
-                                                                data-photo_id="{{ item.photo.id }}" id="increment-qty_{{ item.photo.id }}">
-                                                                <span>
-                                                                    <i class="fas fa-plus fa-sm"></i>
-                                                                </span>
-                                                            </button>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <!-- Update button: triggers form submission -->
-                                                <button type="submit" class="update-btn btn btn-outline-info btn-sm mt-2 w-100">Update</button>
-                                            </form>
-                                            <!-- Remove button: triggers removal from cart -->
-                                            <form method="POST" action="{% url 'remove_from_cart' item.photo.id %}" class="remove-form">
-                                                {% csrf_token %}
-                                                <button type="submit" class="remove-btn btn btn-danger btn-sm mt-2 w-100">Remove</button>
-                                            </form>
-                                        </td>
-                                        <td class="py-3">
-                                            <p class="my-0">${{ item.photo.price|floatformat:2 }}</p>
-                                        </td>
-                                    </tr>
-                                {% endfor %}
-                                <tr>
-                                    <td colspan="5" class="pt-5 text-right">
-                                        <h6><strong>Cart Total: ${{ total|floatformat:2 }}</strong></h6>
-                                        <h4 class="mt-4"><strong>Grand Total: ${{ grand_total|floatformat:2 }}</strong></h4>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td colspan="5" class="text-right">
-                                        <a href="{% url 'gallery' %}" class="btn btn-outline-black rounded-0 btn-lg">
-                                            <span class="icon">
-                                                <i class="fas fa-chevron-left"></i>
-                                            </span>
-                                            <span class="text-uppercase">Keep Shopping</span>
-                                        </a>
-                                        <a href="{% url 'checkout' %}" class="btn btn-black rounded-0 btn-lg">
-                                            <span class="text-uppercase">Secure Checkout</span>
-                                            <span class="icon">
-                                                <i class="fas fa-lock"></i>
-                                            </span>
-                                        </a>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                    {% else %}
-                        <p class="lead mb-5">Your cart is empty.</p>
-                        <a href="{% url 'gallery' %}" class="btn btn-outline-black rounded-0 btn-lg">
-                            <span class="icon">
-                                <i class="fas fa-chevron-left"></i>
-                            </span>
-                            <span class="text-uppercase">Keep Shopping</span>
-                        </a>
-                    {% endif %}
-                </div>
+    <div class="container mb-2 flex-grow-1">
+        <div class="row">
+            <div class="col">
+                <hr>
+                <h2 class="logo-font mb-4">Shopping Cart</h2>
+                <hr>
             </div>
         </div>
-    </main>
+
+        <div class="row">
+            <div class="col">
+                {% if cart_items %}
+                    <div class="table-responsive rounded">
+                        <table class="table table-sm table-borderless">
+                            <thead class="text-black">
+                                <tr>
+                                    <th scope="col">Photo Info</th>
+                                    <th scope="col"></th>
+                                    <th scope="col">Price</th>
+                                    <th scope="col">Qty</th>
+                                    <th scope="col">Subtotal</th>
+                                </tr>
+                            </thead>
+
+                            {% for item in cart_items %}
+                                <tr>
+                                    <td class="p-3 w-25">
+                                        {% if item.photo.image %}
+                                        <img class="img-fluid rounded" src="{{ item.photo.image.url }}" alt="{{ item.photo.title }}">
+                                        {% else %}
+                                        <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.photo.title }}">
+                                        {% endif %}
+                                    </td>
+                                    <td class="py-3">
+                                        <p class="my-0"><strong>{{ item.photo.title }}</strong></p>
+                                    </td>
+                                    <td class="py-3">
+                                        <p class="my-0">${{ item.photo.price }}</p>
+                                    </td>
+                                    <td class="py-3 w-25">
+                                        <form class="form update-form" method="POST" action="{% url 'adjust_cart' item.photo_id %}">
+                                            {% csrf_token %}
+                                            <div class="form-group">
+                                                <div class="input-group">
+                                                    <div class="input-group-prepend">
+                                                        <button class="decrement-qty btn btn-sm btn-black rounded-0" 
+                                                            data-item_id="{{ item.photo_id }}" id="decrement-qty_{{ item.photo_id }}">
+                                                            <span>
+                                                                <i class="fas fa-minus fa-sm"></i>
+                                                            </span>
+                                                        </button>
+                                                    </div>
+                                                    <input class="form-control form-control-sm qty_input" type="number"
+                                                        name="quantity" value="{{ item.quantity }}" min="1" max="99"
+                                                        data-item_id="{{ item.photo_id }}"
+                                                        id="id_qty_{{ item.photo_id }}">
+                                                    <div class="input-group-append">
+                                                        <button class="increment-qty btn btn-sm btn-black rounded-0"
+                                                            data-item_id="{{ item.photo_id }}" id="increment-qty_{{ item.photo_id }}">
+                                                            <span>
+                                                                <i class="fas fa-plus fa-sm"></i>
+                                                            </span>
+                                                        </button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </form>
+                                        <a class="remove-item btn btn-danger btn-sm float-right mt-2" id="remove_{{ item.photo_id }}">
+                                            <small>Remove</small>
+                                        </a>
+                                    </td>
+                                    <td class="py-3">
+                                        <p class="my-0">${{ item.photo.price|multiply:item.quantity }}</p>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            <tr>
+                                <td colspan="5" class="pt-5 text-right">
+                                    <h6><strong>Cart Total: ${{ total|floatformat:2 }}</strong></h6>
+                                    <h4 class="mt-4"><strong>Grand Total: ${{ grand_total|floatformat:2 }}</strong></h4>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="5" class="text-right">
+                                    <a href="{% url 'gallery' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                                        <span class="icon">
+                                            <i class="fas fa-chevron-left"></i>
+                                        </span>
+                                        <span class="text-uppercase">Keep Shopping</span>
+                                    </a>
+                                    <a href="{% url 'checkout' %}" class="btn btn-black rounded-0 btn-lg">
+                                        <span class="text-uppercase">Secure Checkout</span>
+                                        <span class="icon">
+                                            <i class="fas fa-lock"></i>
+                                        </span>
+                                    </a>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                {% else %}
+                    <p class="lead mb-5">Your cart is empty.</p>
+                    <a href="{% url 'gallery' %}" class="btn btn-black text-white rounded-0 btn-lg">
+                        <span class="icon">
+                            <i class="fas fa-chevron-left"></i>
+                        </span>
+                        <span class="text-uppercase">Keep Shopping</span>
+                    </a>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
 
-{% block scripts %}
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+{% block postloadjs %}
+{{ block.super }}
+{% include 'photos/includes/quantity_input_script.html' %}
 
-    <script>
-        // Increment button functionality
-        $(".increment-qty").click(function(e) {
-            e.preventDefault();
-            var photoId = $(this).data('photo_id');
-            var quantityField = $("#id_qty_" + photoId);
-            var newQty = parseInt(quantityField.val()) + 1;
-            quantityField.val(newQty);
-            quantityField.trigger('change');
-        });
+<script type="text/javascript">
+    // Update quantity on click
+    $('.increment-qty, .decrement-qty').click(function(e) {
+        var itemId = $(this).data('item_id');
+        var inputField = $('#id_qty_' + itemId);
+        var currentQty = parseInt(inputField.val());
 
-        // Decrement button functionality
-        $(".decrement-qty").click(function(e) {
-            e.preventDefault();
-            var photoId = $(this).data('photo_id');
-            var quantityField = $("#id_qty_" + photoId);
-            var newQty = parseInt(quantityField.val()) - 1;
-            if (newQty >= 1) {
-                quantityField.val(newQty);
-                quantityField.trigger('change');
+        if ($(this).hasClass('increment-qty')) {
+            inputField.val(currentQty + 1);
+        } else if ($(this).hasClass('decrement-qty') && currentQty > 1) {
+            inputField.val(currentQty - 1);
+        }
+
+        // Trigger form submission
+        inputField.closest('form').submit();
+    });
+
+    // Remove item and reload on click
+    $('.remove-item').click(function(e) {
+        e.preventDefault();
+        var csrfToken = "{{ csrf_token }}";
+        var itemId = $(this).attr('id').split('remove_')[1];
+
+        $.ajax({
+            type: "POST",
+            url: "{% url 'remove_from_cart' 0 %}".replace("0", itemId),
+            data: {
+                'csrfmiddlewaretoken': csrfToken
+            },
+            success: function(response) {
+                location.reload();
+            },
+            error: function() {
+                alert("Error removing item.");
             }
         });
-
-        // Update button form submission (AJAX if needed)
-        $(".update-form").submit(function(e) {
-            e.preventDefault();
-            var form = $(this);
-            var data = form.serialize();
-
-            $.ajax({
-                url: form.attr('action'),
-                method: 'POST',
-                data: data,
-                success: function(response) {
-                    // Optionally reload or update the cart section with the new total
-                    location.reload();
-                },
-                error: function(error) {
-                    console.log("Error updating cart: ", error);
-                }
-            });
-        });
-
-        // Remove button functionality (AJAX if needed)
-        $(".remove-form").submit(function(e) {
-            e.preventDefault();
-            var form = $(this);
-            var data = form.serialize();
-
-            $.ajax({
-                url: form.attr('action'),
-                method: 'POST',
-                data: data,
-                success: function(response) {
-                    // Optionally reload the cart or remove the item from the UI
-                    location.reload();
-                },
-                error: function(error) {
-                    console.log("Error removing item: ", error);
-                }
-            });
-        });
-    </script>
+    });
+</script>
 {% endblock %}
