--- a/templates/base.html
+++ b/templates/base.html
@@ -15,16 +15,19 @@
     <!-- Favicon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="{% static 'images/favicon.svg' %}" type="image/svg+xml">
-
+    
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Lora:ital,wght@1,400;1,700&family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+    
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Stripe -->
+    <script src="https://js.stripe.com/v3/"></script>
     
     <!-- JQuery -->
     <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
     
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Lora:ital,wght@1,400;1,700&family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
-
     {% block extra_css %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     {% endblock %}
@@ -56,9 +59,15 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'view_cart' %}">
                                 Cart
-                                {% if user.is_authenticated and cart_items_count > 0 %}
-                                    ({{ cart_items_count }})
-                                {% endif %}
+                                {% with request.session.cart as cart %}
+                                    {% if cart %}
+                                        {% with cart|length as cart_item_count %}
+                                            {% if cart_item_count > 0 %}
+                                                ({{ cart_item_count }})
+                                            {% endif %}
+                                        {% endwith %}
+                                    {% endif %}
+                                {% endwith %}
                             </a>
                         </li>
                     </ul>
