--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -42,9 +42,9 @@
                         <div class="col-2 mb-1">
                             <a href="{% url 'photo_detail' item.photo.id %}">
                                 {% if item.photo.image %}
-                                    <img class="w-100" src="{{ item.photo.image.url }}" alt="{{ photo.title }}">
+                                    <img class="w-100" src="{{ item.photo.image.url }}" alt="{{ item.photo.title }}">
                                 {% else %}
-                                    <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ photo.title }}">
+                                    <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.photo.title }}">
                                 {% endif %}
                             </a>
                         </div>
