--- a/photos/templates/photos/gallery.html
+++ b/photos/templates/photos/gallery.html
@@ -2,6 +2,10 @@
 {% load static %}
 {% load custom_filters %}
 
+{% block title %}{{ photo.title }} | Really Deep Photography{% endblock %}
+
+{% block page_header %}{% endblock %} <!-- Remove the hero section -->
+
 {% block content %}
 <div class="container">
     {% if messages %}
