--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -3,10 +3,16 @@
 
 {% block title %}Page Not Found | Really Deep Photography{% endblock %}
 
+{% block page_header %}{% endblock %} <!-- Removes hero section -->
+
 {% block content %}
 <div class="bg-black text-white text-center py-5 d-flex flex-column align-items-center justify-content-center" style="min-height: 70vh;">
     <h1 class="display-4">Woah! Looks like you're getting a bit too deep!</h1>
+    
+    <!-- Font Awesome Icon -->
+    <i class="fas fa-compass fa-3x my-4"></i> <!-- Icon with margin for spacing -->
+    
     <p class="lead mt-4">Needless to say, what you're looking for can't be found here.</p>
-    <a href="{% url 'home' %}" class="btn btn-light mt-4">Take Me Home</a>
+    <a href="{% url 'home' %}" class="btn btn-light mt-4">Return to Home</a>
 </div>
 {% endblock %}
