--- a/templates/base.html
+++ b/templates/base.html
@@ -116,11 +116,9 @@
     <footer class="bg-dark text-white text-center text-lg-start mt-5">
         <div class="container p-4">
             <div class="d-flex flex-column align-items-center">
-                <p class="mb-2">Follow us on:</p>
+                <p class="mb-2">Trolling on social media? Then keep track of what we're up to by following us on Facebook:</p>
                 <div class="d-flex flex-column flex-md-row gap-3">
-                    <a href="#" class="text-white text-decoration-none">Instagram <i class="fa-brands fa-instagram"></i></a>
                     <a href="#" class="text-white text-decoration-none">Facebook <i class="fa-brands fa-facebook"></i></a>
-                    <a href="#" class="text-white text-decoration-none">Twitter <i class="fa-brands fa-twitter"></i></a>
                 </div>
             </div>
         </div>
