--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -25,7 +25,7 @@
             <label for="message" class="form-label">Message</label>
             <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
         </div>
-        <button type="submit" class="btn btn-primary">Send Message</button>
+        <button type="submit" class="btn btn-black">Send Message</button>
     </form>
 </div>
 {% endblock %}
