--- a/photos/templates/photos/gallery.html
+++ b/photos/templates/photos/gallery.html
@@ -23,7 +23,7 @@
     <form method="GET" action="{% url 'search' %}" class="mb-4" onsubmit="return validateSearch()">
         <div class="input-group">
             <input type="text" name="q" class="form-control" placeholder="Search photos..." value="{{ request.GET.q|default_if_none:'' }}">
-            <button class="btn btn-primary" type="submit">Search</button>
+            <button class="btn btn-black" type="submit">Search</button>
         </div>
     </form>
 
@@ -47,7 +47,7 @@
                         <img src="{{ photo.image.url|cloudinary_optimized }}" class="card-img-top img-fluid" alt="{{ photo.title }}">
                         <div class="card-body">
                             <h5 class="card-title">{{ photo.title }}</h5>
-                            <a href="{% url 'photo_detail' photo.id %}" class="btn btn-primary text-white">View Details</a>
+                            <a href="{% url 'photo_detail' photo.id %}" class="btn btn-black text-white">View Details</a>
                         </div>
                     </div>
                 </div>
@@ -63,49 +63,31 @@
             {% if is_paginated %}
                 {% if page_obj.has_previous %}
                     <li class="page-item">
-                        <a class="page-link" href="?page=1" aria-label="First page">&laquo; First</a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous page">Previous</a>
+                        <a class="page-link bg-black text-white" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous page">Previous</a>
                     </li>
                 {% else %}
-                    <li class="page-item disabled">
-                        <span class="page-link">&laquo; First</span>
-                    </li>
                     <li class="page-item disabled">
                         <span class="page-link">Previous</span>
                     </li>
                 {% endif %}
 
-                {% for num in page_obj.paginator.page_range %}
-                    {% if page_obj.number == num %}
-                        <li class="page-item active" aria-current="page">
-                            <span class="page-link">{{ num }}</span>
-                        </li>
-                    {% else %}
-                        <li class="page-item">
-                            <a class="page-link" href="?page={{ num }}">{{ num }}</a>
-                        </li>
-                    {% endif %}
-                {% endfor %}
+                <!-- Display current page and total pages -->
+                <li class="page-item disabled">
+                    <span class="page-link">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</span>
+                </li>
 
                 {% if page_obj.has_next %}
                     <li class="page-item">
-                        <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next page">Next</a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}" aria-label="Last page">Last &raquo;</a>
+                        <a class="page-link bg-black text-white" href="?page={{ page_obj.next_page_number }}" aria-label="Next page">Next</a>
                     </li>
                 {% else %}
                     <li class="page-item disabled">
                         <span class="page-link">Next</span>
                     </li>
-                    <li class="page-item disabled">
-                        <span class="page-link">Last &raquo;</span>
-                    </li>
                 {% endif %}
             {% endif %}
         </ul>
     </nav>
+
 </div>
 {% endblock %}
