Add contact view to home app and register it to admin to save contact messages

--- a/checkout/templates/checkout/order_confirmation_email.html
+++ b/checkout/templates/checkout/order_confirmation_email.html
@@ -13,7 +13,7 @@
         </div>
 
         <p>Dear {{ customer_name }},</p>
-        <p>Thank you for shopping with Really Deep Photography. We are processing your order and will notify you once it's on its way.</p>
+        <p>Thank you for shopping with Really Deep Photography. We are grateful for your business!</p>
 
         <div class="card mb-4">
             <div class="card-body">
