--- a/static/css/style.css
+++ b/static/css/style.css
@@ -133,6 +133,17 @@ input[type="text"]:focus {
     text-decoration: underline;
 }
 
+/* Hide number input arrows */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    -moz-appearance: textfield; /* For Firefox */
+}
+
 /* Footer */
 footer {
     background-color: #333;
