--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -28,7 +28,7 @@
                 <div class="card-body">
                     <h5 class="card-title">{{ photo.title }}</h5>
                     <p class="card-text">{{ photo.description }}</p>
-                    <a href="{% url 'photo_detail' photo.id %}" class="btn btn-primary text-white">View Details</a>
+                    <a href="{% url 'photo_detail' photo.id %}" class="btn btn-black text-white">View Details</a>
                 </div>
             </div>
         </div>
